member info collapse fix

--- a/client/users/member/member.styl
+++ b/client/users/member/member.styl
@@ -79,6 +79,8 @@
 .member-block__header-collapser
   display block
   overflow hidden
+  &:focus
+    outline none
 
   .icon-collapse
   .icon-expand
